Bug 1025913 - Let memory-only HTTP cache entries doom disk entries, CacheEntry.mUseDisk immutable, r=michal