netwerk/cache2/CacheEntry.cpp
@@ -312,14 +312,30 @@ bool CacheEntry::Load(bool aTruncate, bool aPriority)
   nsAutoCString fileKey;
   rv = HashingKeyWithStorage(fileKey);
 
-  if (!aTruncate && NS_SUCCEEDED(rv)) {
+  // Check the index under two conditions for two states and take appropriate action:
+  // 1. When this is a disk entry and not told to truncate, check there is a disk file.
+  //    If not, set the 'truncate' flag to true so that this entry will open instantly
+  //    as a new one.
+  // 2. When this is a memory-only entry, check there is a disk file.
+  //    If there is or could be, doom that file.
+  if ((!aTruncate || !mUseDisk) && NS_SUCCEEDED(rv)) {
     // Check the index right now to know we have or have not the entry
     // as soon as possible.
     CacheIndex::EntryStatus status;
-    if (NS_SUCCEEDED(CacheIndex::HasEntry(fileKey, &status)) &&
-        status == CacheIndex::DOES_NOT_EXIST) {
-      LOG(("  entry doesn't exist according information from the index, truncating"));
-      aTruncate = true;
+    if (NS_SUCCEEDED(CacheIndex::HasEntry(fileKey, &status))) {
+      switch (status) {
+      case CacheIndex::DOES_NOT_EXIST:
+        LOG(("  entry doesn't exist according information from the index, truncating"));
+        aTruncate = true;
+        break;
+      case CacheIndex::EXISTS:
+      case CacheIndex::DO_NOT_KNOW:
+        if (!mUseDisk) {
+          LOG(("  entry open as memory-only, but there is (status=%d) a file, dooming it", status));
+          CacheFileIOManager::DoomFileByKey(fileKey, nullptr);
+        }
+        break;
+      }
     }
   }
 
@@ -838,30 +854,6 @@ void CacheEntry::OnOutputClosed()
 
   mozilla::MutexAutoLock lock(mLock);
   InvokeCallbacks();
-}
-
-bool CacheEntry::IsUsingDiskLocked() const
-{
-  CacheStorageService::Self()->Lock().AssertCurrentThreadOwns();
-
-  return IsUsingDisk();
-}
-
-bool CacheEntry::SetUsingDisk(bool aUsingDisk)
-{
-  // Called by the service when this entry is reopen to reflect
-  // demanded storage target.
-
-  if (mState >= READY) {
-    // Don't modify after this entry has been filled.
-    return false;
-  }
-
-  CacheStorageService::Self()->Lock().AssertCurrentThreadOwns();
-
-  bool changed = mUseDisk != aUsingDisk;
-  mUseDisk = aUsingDisk;
-  return changed;
 }
 
 bool CacheEntry::IsReferenced() const
